cambios en view

--- a/css/wiev.css
+++ b/css/wiev.css
@@ -40,6 +40,8 @@ table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
+    color: black;
+    background-color: aqua;
 }
 
 table, th, td {
